<resources>
    <string name="app_name">wmsnew</string>
    <string name="main_title">瑞联智能造WMS</string>
    <string name="splash_top">瑞联WMS+</string>
    <string name="splash_mid">智能制造综合服务商   指尖上的智慧仓库</string>
    <string name="splash_bottom">专业、创新、合作、共赢</string>
    <string name="version_name">版本号：</string>
    <string name="toast_network_error">网络故障,请检查网络连接是否正常</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_account">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登 录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_account">账号格式不正确</string>
    <string name="error_invalid_password">密码格式不正确</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_server_setting">首次登录?服务器设置</string>
    <string name="server_setting_save">保存</string>
    <string name="desc_back">返回</string>

</resources>
