<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F5">

    <ImageView
        android:id="@+id/welcome_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/splash" />

    <TextView
        android:id="@+id/id_top_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/splash_top"
        android:textColor="@color/white"
        android:textSize="28dp" />

    <TextView
        android:id="@+id/id_mid_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_top_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/splash_mid"
        android:textColor="@color/white"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/id_bottom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_mid_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/splash_bottom"
        android:textColor="@color/white"
        android:textSize="14dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_bottom_text"
        android:layout_marginLeft="@dimen/dim_50dp"
        android:layout_marginRight="@dimen/dim_50dp"
        android:layout_marginTop="50dp" />
</RelativeLayout>