<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.rlzz.wms.ui.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/splash" />

            <!--  <TextView
                  style="?android:textAppearanceMedium"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="账号"
                  android:textStyle="bold" />-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="?android:textAppearanceMedium">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_account"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <!--
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Base.V7.Widget.AppCompat.EditText"
                            android:orientation="horizontal">-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="?android:textAppearanceMedium"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_marginRight="@dimen/dim_10dp"
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <!--<ImageButton
                android:id="@+id/btn_clearPwd"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:src="@drawable/ic_icon_close"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/btn_showPwd"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:button="@drawable/ic_icon_eye_selector"
                android:visibility="gone" />-->
            <!--</LinearLayout>-->


            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="日期" />

            <EditText
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="date"
                android:maxLines="1"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/cb_rememberPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="记住密码" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/app_azure"
                android:text="@string/action_sign_in"
                android:textAppearance="?android:textAppearanceMediumInverse" />

            <TextView
                android:id="@+id/tv_serverSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="首次登录？服务器设置" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
